adding code for alexnet features to encoding model

--- a/notebooks/testing/test_pyramid_feat_ext_new.ipynb
+++ b/notebooks/testing/test_pyramid_feat_ext_new.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fb897463",
+   "execution_count": 3,
+   "id": "573f6f13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,6 @@
     "from utils import torch_utils,  default_paths\n",
     "from utils import nsd_utils\n",
     "from model_fitting import initialize_fitting\n",
-    "from feature_extraction import texture_statistics_pyramid\n",
     "\n",
     "device = 'cpu:0'\n",
     "# device = initialize_fitting.init_cuda()\n"
@@ -29,19 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "79497bb9",
+   "execution_count": 4,
+   "id": "73ca9e8d",
    "metadata": {},
    "outputs": [],
    "source": [
     "subject=1;\n",
-    "n_ori=4; n_sf=4; batch_size=100; use_node_storage=False; debug=True;\n"
+    "use_node_storage=False;\n",
+    "debug=True;\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5340a954",
+   "id": "c5b026b5",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5fb547f3",
+   "id": "0c7bae22",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "30948006",
+   "id": "84bdd180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7b69acdd",
+   "id": "88cae9d5",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8795c9c0",
+   "id": "c9ac353a",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "59f7cb45",
+   "id": "1c1e1582",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ffd194f0",
+   "id": "4f073f46",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "752d981a",
+   "id": "4ba00347",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7f950dbf",
+   "id": "574e22e8",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "ea9ead78",
+   "id": "4f0df5f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6b1acb41",
+   "id": "cec6e9ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "1a112ddf",
+   "id": "b2313c43",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "d1135962",
+   "id": "254b8291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "f3c9892a",
+   "id": "08626650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "deac3746",
+   "id": "cf2c49e3",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "381b6a4d",
+   "id": "49732829",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "030e84fc",
+   "id": "e63f267d",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "e4981dbd",
+   "id": "c5e0b3e0",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "b56b5410",
+   "id": "465333c2",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "315c23c9",
+   "id": "7bf2ac2b",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "b26a279f",
+   "id": "da0b7653",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "9ca846a4",
+   "id": "9260634c",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "7003b86b",
+   "id": "6675eaaa",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "61806dbe",
+   "id": "fa907004",
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcbacfe6",
+   "id": "b01f756b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9a198a3d",
+   "id": "0bfbb118",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7c1181ee",
+   "id": "f1b5217a",
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "34ca2fa7",
+   "id": "9d60ead4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "17b65b4e",
+   "id": "5f7c4d96",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "65f10959",
+   "id": "10ef39a5",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "050c0331",
+   "id": "d3ab380d",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7a27334b",
+   "id": "5b8ed284",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea61a705",
+   "id": "ead5d2e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2b20e249",
+   "id": "9099743d",
    "metadata": {},
    "outputs": [],
    "source": [
