plotting texture model w pca

--- a/notebooks/plot_results/plot_pyramid_texture_model.ipynb
+++ b/notebooks/plot_results/plot_pyramid_texture_model.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "f47cf204",
+   "execution_count": 56,
+   "id": "9ae7c745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "4d96f080",
+   "execution_count": 57,
+   "id": "75f1f0e1",
    "metadata": {},
    "outputs": [
     {
@@ -98,8 +98,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "569c2449",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'has_key'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-60-3c200b2ce832>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhas_key\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ridge'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'has_key'"
+     ]
+    }
+   ],
+   "source": [
+    "out.has_key('ridge')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "497225d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'ridgemj' in out"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
-   "id": "1b66121f",
+   "id": "9dca1514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4419585a",
+   "id": "9d8f3457",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4a17d1d3",
+   "id": "a2e49d5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1d54c891",
+   "id": "dff685a4",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7db2cfe3",
+   "id": "bbf5485d",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "98feca69",
+   "id": "8a9758b5",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1d5e3bdb",
+   "id": "5ce72a84",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5aefb95b",
+   "id": "f6195a0c",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e0f0fb90",
+   "id": "cba6f5b0",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "05b30cce",
+   "id": "89f36982",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "996d1a06",
+   "id": "dc067a00",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4810ef2f",
+   "id": "23f6e0d5",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "19446b81",
+   "id": "c6640127",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ce3dad84",
+   "id": "af517f56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "52123dcd",
+   "id": "e0e4e738",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8a1cf66d",
+   "id": "45f37776",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b5c5848c",
+   "id": "e876b41d",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1de5ebec",
+   "id": "0956573e",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a4461cbe",
+   "id": "43a070b9",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a1a8e929",
+   "id": "59503c3e",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "75eda2bd",
+   "id": "afb8a3fd",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f21f9f5d",
+   "id": "ef44ea66",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2d276468",
+   "id": "c8eda418",
    "metadata": {},
    "outputs": [
     {
