changing prf grid, debugging prfs w alexnet

--- a/notebooks/plot_results/plot_full_midlevel_model.ipynb
+++ b/notebooks/plot_results/plot_full_midlevel_model.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "751d1338",
+   "execution_count": 2,
+   "id": "b8ef9cf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "fpX = np.float32\n",
     "\n",
     "import torch \n",
+    "sys.path.append('/user_data/mmhender/imStat/code/')\n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
     "from plotting import plot_utils, summary_plots, load_fits, plot_prf_params\n",
     "plot_utils.set_plotting_defaults()\n",
@@ -29,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5fa806a2",
+   "execution_count": 3,
+   "id": "739b4f62",
    "metadata": {},
    "outputs": [
     {
@@ -99,29 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "57dae6c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14913,)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retlabs.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "0a193bf1",
+   "execution_count": 4,
+   "id": "03bd89b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +115,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "8daf4cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data is in 3d volume space\n",
+      "navigate browser to: 127.0.0.1:33333\n",
+      "Started server on port 33333\n",
+      "Stopping server\n"
+     ]
+    }
+   ],
+   "source": [
+    "port=33333\n",
+    "summary_plots.plot_summary_pycortex(out=out, subject=subject, fitting_type=fitting_type, \\\n",
+    "                                port=port, roi_def=roi_def)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
-   "id": "929dbef4",
+   "id": "5ad438b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "583aeb95",
+   "id": "47b2cfe8",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0bf0d3ce",
+   "id": "4e98b03a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "19445411",
+   "id": "d6ac8cc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "92b4975f",
+   "id": "82bec67e",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "01d1a350",
+   "id": "5707728d",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "32de2b0a",
+   "id": "bcde4a36",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ae53aa13",
+   "id": "810da778",
    "metadata": {
     "tags": []
    },
@@ -295,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "857b6bc9",
+   "id": "827b0980",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ac826241",
+   "id": "4c55536f",
    "metadata": {
     "tags": []
    },
@@ -357,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "918546f3",
+   "id": "72c40a5d",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "305021d3",
+   "id": "9acc5e8b",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "016ea435",
+   "id": "2bbda5dd",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7a38e8bc",
+   "id": "f61d0df0",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ed8bf07a",
+   "id": "79e9d37a",
    "metadata": {
     "tags": []
    },
@@ -513,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5011d040",
+   "id": "fc5abae1",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a4f7a920",
+   "id": "bcc6a204",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aaded678",
+   "id": "a3a6dbe0",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ef2b8823",
+   "id": "137b9646",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d2fbee50",
+   "id": "3eef7282",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a0ce8170",
+   "id": "79aa35b7",
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "962f708c",
+   "id": "282283c6",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b97a7995",
+   "id": "0cfd65e4",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0cb1e0b0",
+   "id": "26cb99e1",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "142f5af5",
+   "id": "66d4509b",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8b3b58a3",
+   "id": "e13491d0",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dc315bbb",
+   "id": "32f17bde",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e7dea709",
+   "id": "92b9246c",
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0553a489",
+   "id": "9de1ae33",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c644342e",
+   "id": "e6339b74",
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4a3793b1",
+   "id": "daa9338b",
    "metadata": {},
    "outputs": [
     {
