plotting results w new prfs

--- a/notebooks/plot_results/plot_alexnet.ipynb
+++ b/notebooks/plot_results/plot_alexnet.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4b336c0",
+   "id": "f638ca63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "34e290cf",
+   "id": "05820f3c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading from /user_data/mmhender/imStat/model_fits/S01/alexnet_Conv5/Oct-22-2021_1919_16/all_fit_params\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S01/alexnet_Conv5/Oct-24-2021_1703_28/all_fit_params\n",
       "\n",
       "dict_keys(['subject', 'volume_space', 'fitting_type', 'fitting_type2', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'zscore_in_groups', 'ridge', 'debug', 'up_to_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'alexnet_layer_name'])\n",
       "subject = 1\n",
@@ -52,7 +52,7 @@
       "voxel_ncsnr: shape (699192,)\n",
       "aperture = 1.0\n",
       "aperture_rf_range = 1.1\n",
-      "models: shape (875, 3)\n",
+      "models: shape (1114, 3)\n",
       "best_losses: shape (19738, 1)\n",
       "best_lambdas: shape (19738, 1)\n",
       "best_params: len 6\n",
@@ -66,7 +66,7 @@
       "ridge = True\n",
       "debug = 0\n",
       "up_to_sess = 40\n",
-      "shuff_rnd_seed = 291922\n",
+      "shuff_rnd_seed = 121724\n",
       "use_precomputed_prfs = False\n",
       "alexnet_layer_name = Conv5_ReLU\n"
      ]
@@ -80,7 +80,7 @@
     "fitting_type = 'alexnet_Conv5'\n",
     "\n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
-    "out, fig_save_folder = load_fits.load_fit_results(subject, volume_space, fitting_type, n_from_end=0, root=root, verbose=True);\n",
+    "out, fig_save_folder = load_fits.load_fit_results(subject, volume_space, fitting_type, n_from_end=1, root=root, verbose=True);\n",
     "load_fits.print_output_summary(out)\n",
     "\n",
     "if not os.path.exists(fig_save_folder):\n",
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3e0bc128",
+   "id": "162df7b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c91df10f",
+   "execution_count": 4,
+   "id": "f1395f60",
    "metadata": {},
    "outputs": [
     {
@@ -114,8 +114,7 @@
      "text": [
       "Data is in 3d volume space\n",
       "navigate browser to: 127.0.0.1:33333\n",
-      "Started server on port 33333\n",
-      "Stopping server\n"
+      "Started server on port 33333\n"
      ]
     }
    ],
@@ -128,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "68bd6fce",
+   "id": "e5dc945e",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "35e5665b",
+   "id": "f990adea",
    "metadata": {},
    "outputs": [
     {
