Changing gaussian function used in pRF generation, adding polar angle grid

--- a/notebooks/im_proc/pyramid_texture_model_CompareToMatlab.ipynb
+++ b/notebooks/im_proc/pyramid_texture_model_CompareToMatlab.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c339c200",
+   "execution_count": 3,
+   "id": "b8f35567",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,17 +16,32 @@
     "\n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
     "sys.path.append(os.path.join(root,'code'))\n",
-    "from model_src import texture_statistics_pyramid as texture_statistics_pyramid\n"
+    "from feature_extraction import texture_statistics_pyramid as texture_statistics_pyramid\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0687f7b0",
+   "execution_count": 4,
+   "id": "4aa47816",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#device: 1\n",
+      "device#: 0\n",
+      "device name: GeForce GTX TITAN X\n",
+      "\n",
+      "torch: 1.8.1+cu111\n",
+      "cuda:  11.1\n",
+      "cudnn: 8005\n",
+      "dtype: torch.float32\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -51,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "19e38ff7",
+   "execution_count": 5,
+   "id": "f8ac3141",
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0628f924",
+   "execution_count": 6,
+   "id": "daf7d8ca",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +108,7 @@
       "Running steerable pyramid feature extraction...\n",
       "Images array shape is:\n",
       "(2, 1, 512, 512)\n",
-      "time elapsed = 2.20991\n"
+      "time elapsed = 1.90533\n"
      ]
     }
    ],
@@ -122,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "00ba896e",
+   "execution_count": 7,
+   "id": "492b82fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8a36e9bd",
+   "execution_count": 8,
+   "id": "495dbee5",
    "metadata": {},
    "outputs": [
     {
@@ -151,64 +166,64 @@
      "output_type": "stream",
      "text": [
       "pixel features in original image\n",
-      "  Weighted mean in original image: 62.49924850\n",
-      "  Weighted var in original image: 3356.53564453\n",
-      "  Weighted skew in original image: 1.37662840\n",
-      "  Weighted kurt in original image: 4.34513235\n",
+      "  Weighted mean in original image: 62.50595856\n",
+      "  Weighted var in original image: 3357.05419922\n",
+      "  Weighted skew in original image: 1.37655067\n",
+      "  Weighted kurt in original image: 4.34468365\n",
       "  Weighted min in original image: 0.00000000\n",
       "  Weighted max in original image: 255.00000000\n",
       "Mean of feature magnitudes in each band [nSF x nOri]\n",
       "\n",
-      "tensor([[  7.8357,   6.9333,   7.8862,   8.3246],\n",
-      "        [ 40.2724,  35.0428,  40.9726,  41.8000],\n",
-      "        [199.4754, 172.5174, 211.9048, 213.3426],\n",
-      "        [948.6097, 796.3140, 871.9817, 910.4413]])\n",
+      "tensor([[  7.8362,   6.9335,   7.8864,   8.3251],\n",
+      "        [ 40.2791,  35.0464,  40.9765,  41.8074],\n",
+      "        [199.5609, 172.5812, 211.9737, 213.4395],\n",
+      "        [949.7428, 797.1475, 872.5570, 911.1714]], device='cuda:0')\n",
       "lowpass band, npix=32\n",
-      "   Weighted skew: 1.23395431\n",
-      "   Weighted kurtosis: 5.60259199\n",
-      "   Lowpass recon autocorrelation: 74337712.00000000\n",
-      "   Real/spatially shifted lowpass within scale cross-correlation: 1370.01342773\n",
+      "   Weighted skew: 1.23761797\n",
+      "   Weighted kurtosis: 5.61488008\n",
+      "   Lowpass recon autocorrelation: 74469208.00000000\n",
+      "   Real/spatially shifted lowpass within scale cross-correlation: 1371.39807129\n",
       "sc=0, npix=64\n",
-      "   Weighted skew: 1.25701153\n",
-      "   Weighted kurtosis: 4.82958603\n",
-      "   Magnitude autocorrelation: 521102.06250000\n",
-      "   Lowpass recon autocorrelation: 6972297.00000000\n",
-      "   Magnitude within scale cross-correlation: 77.74842834\n",
-      "   Real within scale cross-correlation: 93.76954651\n",
-      "   Real/spatially shifted lowpass across scale cross-correlation: -70.90875244\n",
+      "   Weighted skew: 1.25712800\n",
+      "   Weighted kurtosis: 4.82801628\n",
+      "   Magnitude autocorrelation: 521725.31250000\n",
+      "   Lowpass recon autocorrelation: 6981263.50000000\n",
+      "   Magnitude within scale cross-correlation: 77.86649323\n",
+      "   Real within scale cross-correlation: 93.96809387\n",
+      "   Real/spatially shifted lowpass across scale cross-correlation: -71.00807190\n",
       "sc=1, npix=128\n",
-      "   Weighted skew: 1.39677155\n",
-      "   Weighted kurtosis: 4.91191578\n",
-      "   Magnitude autocorrelation: 18112.79101562\n",
-      "   Lowpass recon autocorrelation: 392975.84375000\n",
-      "   Magnitude within scale cross-correlation: 0.84394014\n",
-      "   Real within scale cross-correlation: 0.99156791\n",
-      "   Magnitude across scale cross-correlation: 0.75350583\n",
-      "   Real/real across scale cross-correlation: -0.13993543\n",
-      "   Real/imag across scale cross-correlation: 0.20173226\n",
+      "   Weighted skew: 1.39658117\n",
+      "   Weighted kurtosis: 4.91002512\n",
+      "   Magnitude autocorrelation: 18115.73828125\n",
+      "   Lowpass recon autocorrelation: 393245.56250000\n",
+      "   Magnitude within scale cross-correlation: 0.84421217\n",
+      "   Real within scale cross-correlation: 0.99222511\n",
+      "   Magnitude across scale cross-correlation: 0.75372684\n",
+      "   Real/real across scale cross-correlation: -0.14005722\n",
+      "   Real/imag across scale cross-correlation: 0.20198947\n",
       "sc=2, npix=256\n",
-      "   Weighted skew: 1.41398025\n",
-      "   Weighted kurtosis: 4.71805000\n",
-      "   Magnitude autocorrelation: 612.49597168\n",
-      "   Lowpass recon autocorrelation: 27358.69531250\n",
-      "   Magnitude within scale cross-correlation: 0.00965692\n",
-      "   Real within scale cross-correlation: 0.01079724\n",
-      "   Magnitude across scale cross-correlation: 0.00837787\n",
-      "   Real/real across scale cross-correlation: -0.00165110\n",
-      "   Real/imag across scale cross-correlation: 0.00080364\n",
+      "   Weighted skew: 1.41384912\n",
+      "   Weighted kurtosis: 4.71705246\n",
+      "   Magnitude autocorrelation: 612.57666016\n",
+      "   Lowpass recon autocorrelation: 27368.35156250\n",
+      "   Magnitude within scale cross-correlation: 0.00965791\n",
+      "   Real within scale cross-correlation: 0.01079952\n",
+      "   Magnitude across scale cross-correlation: 0.00837993\n",
+      "   Real/real across scale cross-correlation: -0.00165144\n",
+      "   Real/imag across scale cross-correlation: 0.00080379\n",
       "sc=3, npix=512\n",
-      "   Weighted skew: 1.38562548\n",
-      "   Weighted kurtosis: 4.44673109\n",
-      "   Magnitude autocorrelation: 32.14829636\n",
-      "   Lowpass recon autocorrelation: 2322.10180664\n",
+      "   Weighted skew: 1.38555098\n",
+      "   Weighted kurtosis: 4.44626808\n",
+      "   Magnitude autocorrelation: 32.14975739\n",
+      "   Lowpass recon autocorrelation: 2322.51928711\n",
       "   Magnitude within scale cross-correlation: 0.00011791\n",
-      "   Real within scale cross-correlation: 0.00011281\n",
+      "   Real within scale cross-correlation: 0.00011282\n",
       "   Magnitude across scale cross-correlation: 0.00009972\n",
       "   Real/real across scale cross-correlation: -0.00001627\n",
       "   Real/imag across scale cross-correlation: 0.00000566\n",
       "highpass residual, npix=512\n",
-      "   Highpass residual autocorrelation: 0.03081740\n",
-      "   Highpass residual variance: 62.97774506\n"
+      "   Highpass residual autocorrelation: 0.03050577\n",
+      "   Highpass residual variance: 62.98011780\n"
      ]
     }
    ],
